--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,15 +16,18 @@ jobs:
       run: |
         echo $PROJECT_PRIVATE_SSH_KEY
         echo $PROJECT_PUBLIC_SSH_KEY
+      env:
+        PROJECT_PRIVATE_SSH_KEY: ${{ secrets.PROJECT_PRIVATE_SSH_KEY }}
+        PROJECT_PUBLIC_SSH_KEY: ${{ secrets.PROJECT_PUBLIC_SSH_KEY }}
     - name: Use the Project ID outputs (display it)
       run: |
-        echo Equinix Metal Project "${{ env.PROJECT_NAME }}" has ID "${{ env.PROJECT_ID }}"
+        echo Equinix Metal Project "${{ vars.PROJECT_NAME }}" has ID "${{ vars.PROJECT_ID }}"
     - name: Create device in temporary project
       uses: equinix-labs/metal-device-action@main
 #       continue-on-error: true
       with:
         metal_auth_token: ${{ secrets.METAL_AUTH_TOKEN }}
-        metal_project_id: ${{ env.PROJECT_ID }}
+        metal_project_id: ${{ vars.PROJECT_ID }}
         metro: da
         plan: m3.small.x86
         os: ubuntu_22_04
